Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1,3 +1,7 @@
+/*	===============================
+	Bootstrap import
+	=============================== */
+@import "@{templateCommon}/basekit-bootstrap.less";
 
 /* ===============================
    TEMPLATE CSS
@@ -179,6 +183,7 @@ header {
   display: block;
   float: left;
   padding: 20px 0px 18px;
+  width: 25%;
 }
 
 /* COMPANY NAME */
@@ -302,7 +307,7 @@ footer p {
 .widget.extendednavigation {
   float: right;
   position: relative;
-  max-width: 740px;
+  width: 75%;
 }
 
 .widget.extendednavigation a.pull {
@@ -310,7 +315,6 @@ footer p {
 }
 
 .widget.extendednavigation ul {
-  float: left;
   margin: 0px;
   padding: 0px;
 }
